go_space/frontend/css/style.css
header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 20px;
}

.navbar {
  display: flex;
  align-items: center;
  gap: 20px;
  margin-left: 0;
  margin-top: 0;
}

.menu {
  display: flex;
  gap: 40px;
}

.menu li {
  list-style: none;
  font-size: 20px;
  font-family: 'Times New Roman', Times, serif;
  white-space: nowrap;
}

.menu a {
  text-decoration: none;
  color: rgb(64, 61, 61);
}

.sign {
  padding: 6px 40px;
  background-color: rgb(217, 33, 33);
  border-radius: 8px;
  color: white;
  border-color: rgb(217, 33, 33);
  font-size: large;
  cursor: pointer;

}

.logo {
  width: 200px;
  height: auto;
  padding: 15px 25px;
  margin-right: 40px;

}

.welcome {
  color: #ba0013;
  font-size: 18px;
  font-weight: bold;
  margin-left: 20px;
}

.search {
  height: 700px;
  background-image: url("https://i.pinimg.com/1200x/c7/a5/23/c7a523a2f7f0277e7f829f702ac29246.jpg");
  background-size: cover;
  background-position: center;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 30px;
  margin-top: 10px;
}

.search-box {
  background: #f2f2f2;
  padding: 60px;
  border-radius: 20px;
  text-align: center;
  width: 400px;
  height: 200px;
  margin-top: 700px;

}

.search-box h1 {
  font-size: 30px;
  color: #333;
}

.search-box span {
  color: #e12500;
}

.search-area {
  margin-top: 30px;
}

.search-area select {
  width: 400px;
  padding: 15px;
  border-radius: 10px;
  border: 1px solid #ccc;
  margin-bottom: 20px;
  font-size: 16px;
}

.search-area button {
  width: 400px;
  padding: 18px;
  background: #e12500;
  color: white;
  border: none;
  border-radius: 10px;
  font-size: 18px;
  cursor: pointer;
}

.services h5 {
  text-align: center;
  color: #e12500;
  margin-top: 350px;
  font-size: 25px;
}

.services h2 {
  text-align: center;
  margin-top: -25px;
  font-size: 45px;
}

.cards-container {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  padding: 20px;
  justify-content: center;
}

.card {
  display: flex;
  align-items: center;
  width: 450px;
  border: 1px solid #b2abab;
  border-radius: 15px;
  padding: 20px;
  background: #fff;
  flex-direction: column;

}

.card img {
  width: 150px;
  margin-right: 20px;
}

.card h2 {
  font-size: 10px;
}

.card a {
  color: #ff8a8a;
  text-decoration: none;
  border-bottom: 2px solid;
}

#resultPO {
  display: inline-block;
  margin: 8px;
  padding: 10px 15px;
  background: #f2f2f2;
  border-radius: 8px;
}

#resultCW {
  display: inline-block;
  margin: 8px;
  padding: 10px 15px;
  background: #f2f2f2;
  border-radius: 8px;
}

#resultDD {
  display: inline-block;
  margin: 8px;
  padding: 10px 15px;
  background: #f2f2f2;
  border-radius: 8px;
}

#resultMR {
  display: inline-block;
  margin: 8px;
  padding: 10px 15px;
  background: #f2f2f2;
  border-radius: 8px;
}

.features {
  background: #eee;
  margin-top: 300px;
  padding: 60px 40px;
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  gap: 50px 30px;
  text-align: center;
}

.feature-box img {
  width: 65px;
  margin-bottom: -20px;
}

.feature-box p {
  font-size: 22px;
  color: #666;

}

.section-title {
  text-align: center;
  margin-top: 45px;
  font-size: 45px;
  color: #333;
  transform: translateY(250px);

}


.BlackBG {
  width: 1500px;
  margin-top: 200px;
}

.logoo {
  width: 200px;
}

.logo2 {
  width: 200px;
  padding: 15px 25px;
  margin-right: 40px;
}

.footer {
  background: #111;
  color: white;
  padding: 80px 60px;
  margin-top: 400px
}

.footer-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 50px;
}

.footer-left {
  max-width: 350px;
}

.footer-logo {
  width: 180px;
  margin-bottom: 20px;
}

.social-icons {
  margin: 20px 0;
}


.social-icons a {
  background: #e12500;
  color: white;
  padding: 10px 15px;
  margin-right: 10px;
  border-radius: 8px;
  text-decoration: none;
}

.subscribe-form {
  display: flex;
  margin-top: 50px;
}

.subscribe-form input {
  padding: 12px;
  border: none;
  width: 200px;
  border-radius: 10px;

}

.subscribe-form button {
  padding: 12px 20px;
  border: none;
  background: #e12500;
  color: white;
  cursor: pointer;
  border-radius: 10px;
}

.footer-services ul,
.footer-links ul {
  list-style: none;
  padding: 0;
}

.footer-services li,
.footer-links li {
  margin: 10px 0;
}

.footer-bottom {
  text-align: center;
  margin-top: 100px;
  color: #aaa;
  margin-left: 1000px;
  margin-top: 70px;
}

.footer-contact {
  margin-right: 70px;
}

.footer-services {
  margin-left: 450px;
}

